Main page feature is added

--- a/TrendyolUITests/TrendyolUITests.csproj
+++ b/TrendyolUITests/TrendyolUITests.csproj
@@ -99,6 +99,7 @@
     <None Include="Features\LoginPage.feature">
       <LastGenOutput>LoginPage.feature.cs</LastGenOutput>
     </None>
+    <None Include="Features\MainPage.feature" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
